# wagifoeb

./: .gitignore  README.md  pyproject.toml
wagifoeb/: api.py  cli.py
