[tool.poetry]
name = "wagifoeb"
version = "0.1.1"
description = "Wrapper around original gifoeb code"
authors = ["Roberto Alamos <roberto@aospa.cl>"]
readme = "README.md"
packages = [{include = "wagifoeb"}]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"


[tool.poetry.scripts]
wagifoeb = "wagifoeb.cli:run"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
